--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -26,6 +26,8 @@ jobs:
           node-version: '22'
       - name: Install dependencies
         run: npm install
+      - name: Build metadata
+        run: npm run build:metadata  
       - name: Run tests
         run: npm test
       - name: Setup Pages
